--- a/Sass/main.css
+++ b/Sass/main.css
@@ -101,7 +101,7 @@ label {
 }
 
 #main-container {
-  max-width: 1100px;
+  max-width: 1250px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -111,7 +111,7 @@ label {
   margin-right: auto;
 }
 
-@media (min-width: 62.5rem) {
+@media (min-width: 56.25rem) {
   #main-container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -121,7 +121,7 @@ label {
             align-items: center;
     -webkit-column-gap: 1rem;
             column-gap: 1rem;
-    margin-top: 6rem;
+    margin-top: 8rem;
   }
   #main-container > * {
     -webkit-box-flex: 1;
@@ -131,8 +131,8 @@ label {
 }
 
 #header {
-  max-width: 550px;
-  margin-top: 6rem;
+  max-width: 625px;
+  margin-top: 8rem;
   margin-bottom: 4rem;
 }
 
@@ -150,7 +150,7 @@ label {
 }
 
 #main-content {
-  max-width: 550px;
+  max-width: 625px;
 }
 
 #footer {
@@ -160,7 +160,7 @@ label {
 
 @media (min-width: 37.5rem) {
   #footer {
-    margin-top: 6rem;
+    margin-top: 8rem;
   }
 }
 
@@ -207,6 +207,12 @@ label {
   background-color: white;
   -webkit-box-shadow: 0 8px rgba(0, 0, 0, 0.15);
           box-shadow: 0 8px rgba(0, 0, 0, 0.15);
+}
+
+@media (min-width: 37.5rem) {
+  .sign-up {
+    padding: 3rem;
+  }
 }
 
 .sign-up > * + * {
