--- a/Sass/5-State/_sign-up-form-validation.scss
+++ b/Sass/5-State/_sign-up-form-validation.scss
@@ -1,7 +1,7 @@
 .sign-up__field.is-error {
   border: 2px solid $col-prim-1;
 
-  background-image: url(../../images/icon-error.svg);
+  background-image: url(../images/icon-error.svg);
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: calc(100% - 1.2rem);
